--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -27,3 +27,25 @@ jobs:
           name: CV
           path: CV_SavindiWijenayaka.pdf
           if-no-files-found: error
+  publish:
+    runs-on: ubuntu-20.04
+    needs: build
+    steps:
+      - name: Checkout CV repository
+        uses: actions/checkout@v3
+        with:
+          repository: savindi-wijenayaka/resume
+        
+      - name: Download CV PDF
+        uses: actions/download-artifact@v2
+        with:
+          name: CV
+          path: .
+
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9.0.0
+        with:
+          add: CV_SavindiWijenayaka.pdf
+          message: Update CV (Workflow action)
+          committer_name: Savindi Wijenayaka
+          committer_email: savindi.narmada@gmail.com
