--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: savindi-wijenayaka/resume
+          token: ${{ secrets.UPDATE_CV }}
         
       - name: Download CV PDF
         uses: actions/download-artifact@v2
