Update only pdfx package of the docker image to fix known image issue

--- a/.github/workflows/compile_and_publish.yml
+++ b/.github/workflows/compile_and_publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          pre_compile: "tlmgr update --self && tlmgr update --all"
+          pre_compile: "tlmgr update --self && tlmgr update pdfx"
           root_file: main.tex
           args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -jobname=${{ vars.SAVING_FILENAME }}
       - name: Upload PDF file
