--- a/.github/workflows/compile_and_publish.yml
+++ b/.github/workflows/compile_and_publish.yml
@@ -37,6 +37,20 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: main
+        path: current-repo
+    - name: Checkout main branch
+      uses: actions/checkout@v2
+      with:
+        repository: savindi-wijenayaka/savindi-wijenayaka.github.io
+        ref: main
+        path: public-repo
+    - name: Checkout main branch
+      uses: actions/checkout@v2
+      with:
+        repository: savindi-wijenayaka/savindi-wijenayaka-v2.github.io
+        token: ${{ secrets.WEBSITE_V2_PRIVATE }}
+        ref: main
+        path: private-repo
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
@@ -45,6 +59,8 @@ jobs:
       run: ls -R
     - name: Add and commit to main
       run: | 
+        cd private-repo
+        mv $GITHUB_WORKSPACE/${{ vars.SAVING_FILENAME }}.pdf .
         git config --global user.name 'LaTex Workflow Bot'
         git config --global user.email 'bot@github.io'
         git add ${{ vars.SAVING_FILENAME }}.pdf
