Update github action to publish to public folder

--- a/.github/workflows/compile_and_publish.yml
+++ b/.github/workflows/compile_and_publish.yml
@@ -63,9 +63,9 @@ jobs:
     - name: Add and commit to main
       run: | 
         cd ${{ matrix.repo_details.path }}
-        mv $GITHUB_WORKSPACE/${{ vars.SAVING_FILENAME }}.pdf .
+        mv $GITHUB_WORKSPACE/public/${{ vars.SAVING_FILENAME }}.pdf .
         git config --global user.name 'workflow-bot'
         git config --global user.email 'workflow-bot@savindi-wijenayaka.github.io'
-        git add ${{ vars.SAVING_FILENAME }}.pdf
+        git add public/${{ vars.SAVING_FILENAME }}.pdf
         git commit -m "Update CV"
         git push
